--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -11,6 +11,7 @@
 @import "buttons";
 @import "typography";
 @import "breakpoint";
+@import "ngAnimations";
 /* centered columns styles */
 
 .row-centered {
