--- a/public/sass/_ngAnimations.scss
+++ b/public/sass/_ngAnimations.scss
@@ -1,7 +1,7 @@
 .ui-view-container {
     position: relative;
     height: 200px;
-     [ui-view]#view-transistions.ng-enter, [ui-view]#view-transistions.ng-leave {
+    [ui-view]#view-transistions.ng-enter, [ui-view]#view-transistions.ng-leave {
         position: absolute;
         left: 0;
         right: 0;
@@ -34,4 +34,28 @@
             }
         }
     }
+}
+
+.form-error-animation {
+    transition: 0.5s linear all;
+    color: red;
+    font-weight: 500;
+}
+
+.form-error-animation.ng-enter {
+    transition: 0.5s linear all;
+    opacity: 0;
+}
+
+.form-error-animation.ng-enter.ng-enter-active {
+    opacity: 1;
+}
+
+.form-error-animation.ng-leave {
+    transition: 0.5s linear all;
+    opacity: 1;
+}
+
+.form-error-animation.ng-leave.ng-leave-active {
+    opacity: 0;
 }
